--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Mern starter template</title>
+    <title>SaaS starter template</title>
   </head>
   <body>
     <div id="root"></div>
